# llm-tournament-widget

./: README.md  plan.md
api/: .env.example  Makefile  main.py  pyproject.toml
api/app/: main.py
api/app/api/v1/: evaluation.py  health.py  models.py
api/app/core/: config.py  models.py  models_config.py
api/app/db/: database.py
api/app/services/: evaluation_service.py  llm_providers.py  provider_factory.py  rate_limiter.py
api/scripts/: setup_db.py
api/tests/: test_main.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: EvaluationTable.test.tsx  EvaluationTable.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  ModelSelector.tsx  index.ts
frontend/src/shared/: index.ts
frontend/src/shared/services/: api.test.ts  api.ts
frontend/src/shared/types/: api.ts
frontend/src/shared/utils/: evaluation.test.ts  evaluation.ts
frontend/src/test/: setup.ts
