[tool.poetry]
name = "llm-tournament-api"
version = "0.1.0"
description = "FastAPI backend for LLM Tournament Widget"
authors = ["Mike Khor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
openai = "^1.101.0"
anthropic = "^0.34.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.20"
uvicorn = "^0.35.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
greenlet = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
